# xPalm

./: .gitignore  .prettierrc.json  Cargo.toml  README.md  main.py  requirements.txt  xpalm.py
core/: controller.py  local_ip.py  multicast.py  toasts.py
src/: main.rs
src/services/: announcer.rs  ghost.rs  instance.rs  local_ip.rs  mod.rs  raw_input.rs
src/utils/: clear.rs
