[package]
name = "xpalm"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
inquire = "0.7.5"
keyboard_listener_windows = "0.2.0"
local-ip-address = "0.6.3"
once_cell = "1.20.2"
tokio = { version = "1.41.1", features = ["full"] }
vigem-client = "0.1.4"
whoami = "1.5.2"
windows = { version = "0.58.0", features = [
    "Win32",
    "Win32_System",
    "Win32_System_SystemInformation",
    "Win32_UI",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi"
]}
windows-core = "0.58.0"
